--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/widget.css
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/widget.css
@@ -1,64 +1,64 @@
 /* Search */
 /* line 2, ../../scss/system/widget.scss */
-.widget_search { position: fixed; top: 11px; left: 50px; color: #ffffff; font-size: 16px; height: 29px; margin: 0; padding: 0; }
-/* line 12, ../../scss/system/widget.scss */
-.widget_search .button_open { position: absolute; top: 5px; right: -20px; cursor: pointer; z-index: 2; transition: all .4s ease-out; }
+.widget_search { position: fixed; left: 50px; color: #ffffff; font-size: 16px; margin: 0; display: flex; align-items: start; height: 48px; padding: 12px; }
+/* line 13, ../../scss/system/widget.scss */
+.widget_search .button_open { position: absolute; right: -20px; cursor: pointer; z-index: 2; transition: all .4s ease-out; }
 /* line 22, ../../scss/system/widget.scss */
-.widget_search .button_close { display: none; position: absolute; top: 5px; right: -25px; cursor: pointer; z-index: 1; }
-/* line 31, ../../scss/system/widget.scss */
-.widget_search input { display: none; position: relative; border: none; border-bottom: 1px solid #ffffff; font-size: 16px; padding: 5px 0; background: 0; color: #ffffff; }
-@media (max-width: 599px) { /* line 31, ../../scss/system/widget.scss */
+.widget_search .button_close { display: none; position: absolute; right: -25px; cursor: pointer; z-index: 1; }
+/* line 30, ../../scss/system/widget.scss */
+.widget_search input { display: none; position: relative; border: none; border-bottom: 1px solid #ffffff; font-size: 16px; background: 0; color: #ffffff; }
+@media (max-width: 599px) { /* line 30, ../../scss/system/widget.scss */
   .widget_search input { width: 100%; } }
-@media (min-width: 600px) { /* line 31, ../../scss/system/widget.scss */
+@media (min-width: 600px) { /* line 30, ../../scss/system/widget.scss */
   .widget_search input { width: 50%; right: -50%; } }
-/* line 50, ../../scss/system/widget.scss */
+/* line 48, ../../scss/system/widget.scss */
 .widget_search input:focus { outline: none; }
 @media (max-width: 599px) { /* line 2, ../../scss/system/widget.scss */
-  .widget_search { right: 120px; }
-  /* line 57, ../../scss/system/widget.scss */
+  .widget_search { right: 130px; }
+  /* line 55, ../../scss/system/widget.scss */
   .widget_search .animate { right: 100%; } }
 @media (min-width: 600px) { /* line 2, ../../scss/system/widget.scss */
-  .widget_search { right: 142px; }
-  /* line 64, ../../scss/system/widget.scss */
-  .widget_search .animate { right: 50%; } }
+  .widget_search { right: 140px; }
+  /* line 62, ../../scss/system/widget.scss */
+  .widget_search .animate { right: 51%; } }
 
 /* Date picker */
-/* line 71, ../../scss/system/widget.scss */
+/* line 69, ../../scss/system/widget.scss */
 .widget_datePicker_back { display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; background-color: #000000; opacity: 0.5; z-index: 20; }
 
-/* line 82, ../../scss/system/widget.scss */
+/* line 80, ../../scss/system/widget.scss */
 .widget_datePicker { display: none; position: fixed; top: 5%; left: 0; right: 0; margin-right: auto; margin-left: auto; padding: 0px; border-radius: 2px; border-top: none; border-bottom: none; width: 310px; background-color: #ffffff; z-index: 21; }
-/* line 98, ../../scss/system/widget.scss */
+/* line 96, ../../scss/system/widget.scss */
 .widget_datePicker .header { height: 55px; padding: 20px; border-top-left-radius: 2px; border-top-right-radius: 2px; border-bottom-left-radius: 0px; }
-/* line 105, ../../scss/system/widget.scss */
+/* line 103, ../../scss/system/widget.scss */
 .widget_datePicker .header p { margin: 0; opacity: 0.7; cursor: pointer; }
-/* line 112, ../../scss/system/widget.scss */
+/* line 110, ../../scss/system/widget.scss */
 .widget_datePicker .listYears { display: none; height: 345px; overflow-y: scroll; }
-/* line 117, ../../scss/system/widget.scss */
+/* line 115, ../../scss/system/widget.scss */
 .widget_datePicker .listYears .mdc-list { overflow: hidden; padding: 0; margin: 0; }
-/* line 122, ../../scss/system/widget.scss */
+/* line 120, ../../scss/system/widget.scss */
 .widget_datePicker .listYears .mdc-list ul { padding: 0; margin: 0; }
-/* line 126, ../../scss/system/widget.scss */
+/* line 124, ../../scss/system/widget.scss */
 .widget_datePicker .listYears .mdc-list ul .mdc-list-item { display: block; text-align: center; line-height: 42px; height: 42px; }
-/* line 136, ../../scss/system/widget.scss */
+/* line 134, ../../scss/system/widget.scss */
 .widget_datePicker .month { margin: 0; padding: 0; text-align: center; height: 37px; }
-/* line 142, ../../scss/system/widget.scss */
+/* line 140, ../../scss/system/widget.scss */
 .widget_datePicker .month div { display: inline-block; }
-/* line 146, ../../scss/system/widget.scss */
+/* line 144, ../../scss/system/widget.scss */
 .widget_datePicker .month .label { width: 180px; }
-/* line 150, ../../scss/system/widget.scss */
+/* line 148, ../../scss/system/widget.scss */
 .widget_datePicker .month .material-icons { position: relative; top: 8px; width: 48px; cursor: pointer; }
-/* line 158, ../../scss/system/widget.scss */
+/* line 156, ../../scss/system/widget.scss */
 .widget_datePicker .week ul { margin: 0; padding: 0; text-align: center; }
-/* line 163, ../../scss/system/widget.scss */
+/* line 161, ../../scss/system/widget.scss */
 .widget_datePicker .week ul li { position: relative; display: inline-block; border-radius: 50%; width: 42px; height: 42px; line-height: 42px; opacity: 0.5; font-size: 12px; }
-/* line 175, ../../scss/system/widget.scss */
+/* line 173, ../../scss/system/widget.scss */
 .widget_datePicker .day ul { margin: 0; padding: 0; text-align: center; }
-/* line 180, ../../scss/system/widget.scss */
+/* line 178, ../../scss/system/widget.scss */
 .widget_datePicker .day ul li { position: relative; display: inline-block; width: 42px; height: 42px; line-height: 42px; font-size: 11px; }
-/* line 188, ../../scss/system/widget.scss */
+/* line 186, ../../scss/system/widget.scss */
 .widget_datePicker .day ul li span { display: inline-block; width: 32px; height: 32px; line-height: 32px; cursor: pointer; border-radius: 50%; }
-/* line 199, ../../scss/system/widget.scss */
+/* line 197, ../../scss/system/widget.scss */
 .widget_datePicker .button { text-align: right; padding: 10px; }
 
 /*# sourceMappingURL=widget.css.map */
