--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/layout/layout_module.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/layout/layout_module.html.twig
@@ -4,7 +4,7 @@
     </div>
     <div class="title">
         {% block moduleHeaderIcon %}{% endblock %}
-        <h3 class="mdc-typography--title">{% block moduleHeader %}{% endblock %}</h3>
+        <h1 class="mdc-typography--headline6">{% block moduleHeader %}{% endblock %}</h1>
     </div>
     <div class="mdc-typography--body1">{% block moduleContainer %}{% endblock %}</div>
     <div class="mdc-card__actions">{% block moduleFooter %}{% endblock %}</div>
