--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/layout/layout_site.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/layout/layout_site.html.twig
@@ -12,7 +12,7 @@
         {% block headMeta %}{% endblock %}
         {% block headLink %}{% endblock %}
     </head>
-    <body class="mdc-typography">
+    <body class="mdc-typography user_select_none">
         {% block headerContainer %}{% endblock %}
         <main class="mdc-toolbar-fixed-adjust">
             <div class="mdc-layout-grid">
