--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
@@ -143,7 +143,7 @@
         {% endfor %}
     {% endif %}
 
-    <footer class="mdc-theme--text-primary-on-primary footer">
+    <footer class="mdc-theme--primary-bg mdc-theme--on-primary footer">
         <div class="icon">
             <div>
                 <i class="material-icons">desktop_windows</i>
