--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/basic.css
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/basic.css
@@ -12,27 +12,27 @@
 @-o-viewport { width: device-width; }
 @viewport { width: device-width; }
 /* line 45, ../../scss/system/utility.scss */
+.user_select_none { -webkit-touch-callout: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
+
+/* line 53, ../../scss/system/utility.scss */
 .user_touch_none { -ms-touch-action: none; touch-action: none; }
 
-/* line 50, ../../scss/system/utility.scss */
-.user_select_none { -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
-
-/* line 57, ../../scss/system/utility.scss */
+/* line 58, ../../scss/system/utility.scss */
 .clearfix::after { content: ""; clear: both; }
 
-/* line 62, ../../scss/system/utility.scss */
+/* line 63, ../../scss/system/utility.scss */
 .margin_top { margin-top: 20px !important; }
 
-/* line 65, ../../scss/system/utility.scss */
+/* line 66, ../../scss/system/utility.scss */
 .margin_top_clear { margin-top: 0 !important; }
 
-/* line 69, ../../scss/system/utility.scss */
+/* line 70, ../../scss/system/utility.scss */
 .align_left { text-align: left; }
 
-/* line 72, ../../scss/system/utility.scss */
+/* line 73, ../../scss/system/utility.scss */
 .align_center { text-align: center; }
 
-/* line 75, ../../scss/system/utility.scss */
+/* line 76, ../../scss/system/utility.scss */
 .align_right { text-align: right; }
 
 /*html { position: relative; min-height: 100%;
@@ -150,65 +150,65 @@ legend { width: inherit; padding: 0 10px; border-bottom: none;
 }*/
 /* Search */
 /* line 2, ../../scss/system/widget.scss */
-.widget_search { position: fixed; top: 11px; left: 50px; color: #ffffff; font-size: 16px; height: 29px; margin: 0; padding: 0; }
-/* line 12, ../../scss/system/widget.scss */
-.widget_search .button_open { position: absolute; top: 5px; right: -20px; cursor: pointer; z-index: 2; transition: all .4s ease-out; }
+.widget_search { position: fixed; left: 50px; color: #ffffff; font-size: 16px; margin: 0; display: flex; align-items: start; height: 48px; padding: 12px; }
+/* line 13, ../../scss/system/widget.scss */
+.widget_search .button_open { position: absolute; right: -20px; cursor: pointer; z-index: 2; transition: all .4s ease-out; }
 /* line 22, ../../scss/system/widget.scss */
-.widget_search .button_close { display: none; position: absolute; top: 5px; right: -25px; cursor: pointer; z-index: 1; }
-/* line 31, ../../scss/system/widget.scss */
-.widget_search input { display: none; position: relative; border: none; border-bottom: 1px solid #ffffff; font-size: 16px; padding: 5px 0; background: 0; color: #ffffff; }
-@media (max-width: 599px) { /* line 31, ../../scss/system/widget.scss */
+.widget_search .button_close { display: none; position: absolute; right: -25px; cursor: pointer; z-index: 1; }
+/* line 30, ../../scss/system/widget.scss */
+.widget_search input { display: none; position: relative; border: none; border-bottom: 1px solid #ffffff; font-size: 16px; background: 0; color: #ffffff; }
+@media (max-width: 599px) { /* line 30, ../../scss/system/widget.scss */
   .widget_search input { width: 100%; } }
-@media (min-width: 600px) { /* line 31, ../../scss/system/widget.scss */
+@media (min-width: 600px) { /* line 30, ../../scss/system/widget.scss */
   .widget_search input { width: 50%; right: -50%; } }
-/* line 50, ../../scss/system/widget.scss */
+/* line 48, ../../scss/system/widget.scss */
 .widget_search input:focus { outline: none; }
 @media (max-width: 599px) { /* line 2, ../../scss/system/widget.scss */
-  .widget_search { right: 120px; }
-  /* line 57, ../../scss/system/widget.scss */
+  .widget_search { right: 130px; }
+  /* line 55, ../../scss/system/widget.scss */
   .widget_search .animate { right: 100%; } }
 @media (min-width: 600px) { /* line 2, ../../scss/system/widget.scss */
-  .widget_search { right: 142px; }
-  /* line 64, ../../scss/system/widget.scss */
-  .widget_search .animate { right: 50%; } }
+  .widget_search { right: 140px; }
+  /* line 62, ../../scss/system/widget.scss */
+  .widget_search .animate { right: 51%; } }
 
 /* Date picker */
-/* line 71, ../../scss/system/widget.scss */
+/* line 69, ../../scss/system/widget.scss */
 .widget_datePicker_back { display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; background-color: #000000; opacity: 0.5; z-index: 20; }
 
-/* line 82, ../../scss/system/widget.scss */
+/* line 80, ../../scss/system/widget.scss */
 .widget_datePicker { display: none; position: fixed; top: 5%; left: 0; right: 0; margin-right: auto; margin-left: auto; padding: 0px; border-radius: 2px; border-top: none; border-bottom: none; width: 310px; background-color: #ffffff; z-index: 21; }
-/* line 98, ../../scss/system/widget.scss */
+/* line 96, ../../scss/system/widget.scss */
 .widget_datePicker .header { height: 55px; padding: 20px; border-top-left-radius: 2px; border-top-right-radius: 2px; border-bottom-left-radius: 0px; }
-/* line 105, ../../scss/system/widget.scss */
+/* line 103, ../../scss/system/widget.scss */
 .widget_datePicker .header p { margin: 0; opacity: 0.7; cursor: pointer; }
-/* line 112, ../../scss/system/widget.scss */
+/* line 110, ../../scss/system/widget.scss */
 .widget_datePicker .listYears { display: none; height: 345px; overflow-y: scroll; }
-/* line 117, ../../scss/system/widget.scss */
+/* line 115, ../../scss/system/widget.scss */
 .widget_datePicker .listYears .mdc-list { overflow: hidden; padding: 0; margin: 0; }
-/* line 122, ../../scss/system/widget.scss */
+/* line 120, ../../scss/system/widget.scss */
 .widget_datePicker .listYears .mdc-list ul { padding: 0; margin: 0; }
-/* line 126, ../../scss/system/widget.scss */
+/* line 124, ../../scss/system/widget.scss */
 .widget_datePicker .listYears .mdc-list ul .mdc-list-item { display: block; text-align: center; line-height: 42px; height: 42px; }
-/* line 136, ../../scss/system/widget.scss */
+/* line 134, ../../scss/system/widget.scss */
 .widget_datePicker .month { margin: 0; padding: 0; text-align: center; height: 37px; }
-/* line 142, ../../scss/system/widget.scss */
+/* line 140, ../../scss/system/widget.scss */
 .widget_datePicker .month div { display: inline-block; }
-/* line 146, ../../scss/system/widget.scss */
+/* line 144, ../../scss/system/widget.scss */
 .widget_datePicker .month .label { width: 180px; }
-/* line 150, ../../scss/system/widget.scss */
+/* line 148, ../../scss/system/widget.scss */
 .widget_datePicker .month .material-icons { position: relative; top: 8px; width: 48px; cursor: pointer; }
-/* line 158, ../../scss/system/widget.scss */
+/* line 156, ../../scss/system/widget.scss */
 .widget_datePicker .week ul { margin: 0; padding: 0; text-align: center; }
-/* line 163, ../../scss/system/widget.scss */
+/* line 161, ../../scss/system/widget.scss */
 .widget_datePicker .week ul li { position: relative; display: inline-block; border-radius: 50%; width: 42px; height: 42px; line-height: 42px; opacity: 0.5; font-size: 12px; }
-/* line 175, ../../scss/system/widget.scss */
+/* line 173, ../../scss/system/widget.scss */
 .widget_datePicker .day ul { margin: 0; padding: 0; text-align: center; }
-/* line 180, ../../scss/system/widget.scss */
+/* line 178, ../../scss/system/widget.scss */
 .widget_datePicker .day ul li { position: relative; display: inline-block; width: 42px; height: 42px; line-height: 42px; font-size: 11px; }
-/* line 188, ../../scss/system/widget.scss */
+/* line 186, ../../scss/system/widget.scss */
 .widget_datePicker .day ul li span { display: inline-block; width: 32px; height: 32px; line-height: 32px; cursor: pointer; border-radius: 50%; }
-/* line 199, ../../scss/system/widget.scss */
+/* line 197, ../../scss/system/widget.scss */
 .widget_datePicker .button { text-align: right; padding: 10px; }
 
 /*$spaceBottom: 120px;
@@ -430,86 +430,79 @@ p { margin: 0;
 #page_menu_sort, #module_position_sort { position: relative;  div { position: absolute; top: -105px; left: 50%; width: 50px; }
 }*/
 /* line 1013, ../../scss/system/basic.scss */
-:root { --mdc-theme-primary: #1976d2; --mdc-theme-primary-light: #63a4ff; --mdc-theme-primary-dark: #004ba0; --mdc-theme--text-primary-on-primary: #ffffff; --mdc-theme--text-primary-on-secondary: #ffffff; --mdc-theme-secondary: #d50000; --mdc-theme-secondary-light: #ff5131; --mdc-theme-secondary-dark: #9b0000; --mdc-theme--text-secondary-on-secondary: #ffffff; --mdc-theme--text-secondary-on-primary: #ffffff; --mdc-theme-background: #ffffff; }
+:root { --mdc-theme-primary: #1976d2; --mdc-theme-on-primary: #ffffff; --mdc-theme-secondary: #d50000; --mdc-theme-on-secondary: #ffffff; --mdc-theme-background: #ffffff; --mdc-theme-surface: #ffffff; --mdc-theme-on-surface: #ffffff; }
 
-/* line 1029, ../../scss/system/basic.scss */
+/* line 1026, ../../scss/system/basic.scss */
 ::placeholder { color: #ffffff; opacity: 1; }
 
-/* line 1033, ../../scss/system/basic.scss */
+/* line 1030, ../../scss/system/basic.scss */
 :-ms-input-placeholder { color: #ffffff; }
 
-/* line 1036, ../../scss/system/basic.scss */
+/* line 1033, ../../scss/system/basic.scss */
 ::-ms-input-placeholder { color: #ffffff; }
 
-/* line 1040, ../../scss/system/basic.scss */
+/* line 1037, ../../scss/system/basic.scss */
 html, body { margin: 0; padding: 0; }
 
-/* line 1044, ../../scss/system/basic.scss */
+/* line 1042, ../../scss/system/basic.scss */
 html { height: 100%; }
 
-/* line 1047, ../../scss/system/basic.scss */
+/* line 1045, ../../scss/system/basic.scss */
 body { position: relative; min-height: 100%; }
 
-/* line 1052, ../../scss/system/basic.scss */
+/* line 1050, ../../scss/system/basic.scss */
 main { padding-bottom: 80px; }
 
-/* line 1056, ../../scss/system/basic.scss */
-.mdc-toolbar-fixed-adjust { margin-top: 200px; }
+/*.mdc-toolbar-fixed-adjust { margin-top: 200px;
+}
+.mdc-toolbar__row--with-image { &:first-child::after { background-image: url("../../images/templates/basic/16-9.jpg"); background-size: cover; background-position: center; }
+}*/
+/* line 1065, ../../scss/system/basic.scss */
+.mdc-button { margin-top: 5px; }
+/* line 1068, ../../scss/system/basic.scss */
+.mdc-button i { margin-top: -2px; }
 
-/* line 1060, ../../scss/system/basic.scss */
-.mdc-toolbar__row--with-image:first-child::after { background-image: url("../../images/templates/basic/16-9.jpg"); background-size: cover; background-position: center; }
-
-/* line 1067, ../../scss/system/basic.scss */
-.mdc-button { margin: 5px 0; }
-/* line 1070, ../../scss/system/basic.scss */
-.mdc-button i { display: inline-block; width: 18px; height: 18px; margin-right: 8px; font-size: 18px; line-height: inherit; vertical-align: top; }
-
-/* line 1083, ../../scss/system/basic.scss */
+/* line 1075, ../../scss/system/basic.scss */
 .page_container .header h1 { margin: 0; }
 
-/* line 1095, ../../scss/system/basic.scss */
-.footer { display: flex; justify-content: center; flex-direction: column; text-align: center; background-color: #004ba0; position: absolute; bottom: 0; width: 100%; height: 80px; }
-/* line 1108, ../../scss/system/basic.scss */
+/* line 1081, ../../scss/system/basic.scss */
+.footer { display: flex; justify-content: center; flex-direction: column; text-align: center; position: absolute; bottom: 0; width: 100%; height: 80px; }
+/* line 1094, ../../scss/system/basic.scss */
 .footer .icon div { display: inline-block; margin: 5px 10px; }
-/* line 1115, ../../scss/system/basic.scss */
+/* line 1101, ../../scss/system/basic.scss */
 .footer .text p { margin: 0; font-size: 12px; }
 
-/* line 1122, ../../scss/system/basic.scss */
-.module, .module_clean { padding: 5px; overflow: hidden; }
-/* line 1126, ../../scss/system/basic.scss */
+/* line 1108, ../../scss/system/basic.scss */
+.module, .module_clean { padding: 5px; overflow: hidden; /*.mdc-text-field_hidden_fix { display: block !important; margin: 0 !important; height: 0 !important;
+}*/ }
+/* line 1112, ../../scss/system/basic.scss */
 .module .settings, .module_clean .settings { display: none; }
-/* line 1130, ../../scss/system/basic.scss */
+/* line 1116, ../../scss/system/basic.scss */
 .module .drag, .module_clean .drag { display: none; }
-/* line 1135, ../../scss/system/basic.scss */
-.module .title i, .module .title h3, .module_clean .title i, .module_clean .title h3 { display: inline-block; vertical-align: middle; margin: 0; }
-/* line 1142, ../../scss/system/basic.scss */
+/* line 1121, ../../scss/system/basic.scss */
+.module .title i, .module .title h1, .module_clean .title i, .module_clean .title h1 { display: inline-block; vertical-align: middle; margin: 0; }
+/* line 1128, ../../scss/system/basic.scss */
 .module .mdc-card__actions, .module_clean .mdc-card__actions { padding: 0 !important; min-height: auto !important; }
-/* line 1148, ../../scss/system/basic.scss */
-.module .textField_group .material-icons, .module_clean .textField_group .material-icons { margin-bottom: 5px; }
-/* line 1153, ../../scss/system/basic.scss */
-.module .mdc-text-field, .module .mdc-select, .module_clean .mdc-text-field, .module_clean .mdc-select { height: 30px !important; }
-/* line 1156, ../../scss/system/basic.scss */
-.module .mdc-select, .module_clean .mdc-select { margin-top: 8px; margin-bottom: 18px; }
-/* line 1160, ../../scss/system/basic.scss */
-.module .mdc-select .mdc-select__surface, .module_clean .mdc-select .mdc-select__surface { padding-bottom: 0; }
-/* line 1165, ../../scss/system/basic.scss */
-.module .mdc-text-field_hidden_fix, .module_clean .mdc-text-field_hidden_fix { display: block !important; margin: 0 !important; height: 0 !important; }
+/* line 1134, ../../scss/system/basic.scss */
+.module .textField_group .mdc-text-field, .module .textField_group .mdc-text-field--box, .module .textField_group .mdc-text-field--outlined, .module_clean .textField_group .mdc-text-field, .module_clean .textField_group .mdc-text-field--box, .module_clean .textField_group .mdc-text-field--outlined { margin-top: 8px; margin-bottom: 0; }
+/* line 1140, ../../scss/system/basic.scss */
+.module .textField_group .mdc-text-field__basic .mdc-floating-label, .module_clean .textField_group .mdc-text-field__basic .mdc-floating-label { padding-left: 28px; }
+/* line 1146, ../../scss/system/basic.scss */
+.module .textField_group .mdc-text-field__basic .material-icons, .module .textField_group .mdc-text-field__basicTrailing .material-icons, .module_clean .textField_group .mdc-text-field__basic .material-icons, .module_clean .textField_group .mdc-text-field__basicTrailing .material-icons { margin-bottom: 5px; }
+/* line 1151, ../../scss/system/basic.scss */
+.module .textField_group .mdc-select, .module_clean .textField_group .mdc-select { height: 48px; }
 
-/* line 1172, ../../scss/system/basic.scss */
+/* line 1163, ../../scss/system/basic.scss */
 .module { width: 100%; margin: auto; border: 1px solid #dadada; background-color: #ececec; }
-/* line 1178, ../../scss/system/basic.scss */
+/* line 1169, ../../scss/system/basic.scss */
 .module .title { border-bottom: 1px solid #dadada; }
 
-/* line 1183, ../../scss/system/basic.scss */
+/* line 1174, ../../scss/system/basic.scss */
 .menu_registration { list-style-type: none; margin: 0; padding: 0; }
-/* line 1188, ../../scss/system/basic.scss */
+/* line 1179, ../../scss/system/basic.scss */
 .menu_registration li { display: inline-block; }
 
-/* line 1196, ../../scss/system/basic.scss */
-#panel_id_2 .form_user_authentication .container_submit .mdc-form-field, #panel_id_2 .form_user_authentication .container_submit .mdc-button { display: inline-block; }
-/* line 1201, ../../scss/system/basic.scss */
-#panel_id_2 .form_user_authentication .container_submit .mdc-form-field label[for=mdc_checkbox] { font-size: 10px; }
-/* line 1209, ../../scss/system/basic.scss */
+/* line 1192, ../../scss/system/basic.scss */
 #panel_id_2 .container_link a { display: block; text-decoration: none !important; }
 
 /*# sourceMappingURL=basic.css.map */
