--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/authentication.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/authentication.html.twig
@@ -27,15 +27,15 @@
         <p><b>{% trans %}authentication_3{% endtrans %}</b></p>
         <p>{{response.values.dateLastLogin[0]}} [{{response.values.dateLastLogin[1]}}]</p>
         <div>
-            <a class="mdc-button mdc-button--raised mdc-button--dense" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 1, 'urlExtra': "cp_profile"})}}">{% trans %}authentication_4{% endtrans %}</a>
-            <a class="mdc-button mdc-button--raised mdc-button--dense" href="{{path("authentication_exit_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}">{% trans %}authentication_5{% endtrans %}</a>
+            <a class="mdc-button mdc-button--dense mdc-button--raised" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 1, 'urlExtra': "cp_profile"})}}">{% trans %}authentication_4{% endtrans %}</a>
+            <a class="mdc-button mdc-button--dense mdc-button--raised" href="{{path("authentication_exit_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}">{% trans %}authentication_5{% endtrans %}</a>
         </div>
     {% else %}
         {% form_theme form "@UebusaitoBundleViews/layout/layout_form_materialDesign.html.twig" %}
 
         <form id="form_authentication" class="form_user_authentication" action="{{path("authentication_enter_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-            {{form_row(form._username, {'label': "authentication_6", 'icon': "pets"})}}
-            {{form_row(form._password, {'label': "authentication_7", 'icon': "linear_scale"})}}
+            {{form_row(form._username, {'label': "authentication_6", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "pets"})}}
+            {{form_row(form._password, {'label': "authentication_7", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
             
             {% if (settingRow['captcha'] == true) %}
                 {{-include("@UebusaitoBundleViews/include/captcha.html.twig")-}}
@@ -44,7 +44,7 @@
             {{form_widget(form._token)}}
 
             <div class="container_submit">
-                {{form_widget(form.submit, {'label': "authentication_9"})}}
+                {{form_widget(form.submit, {'label': "authentication_9", 'dense': "", 'raised': ""})}}
                 {{form_widget(form._remember_me, {'label': "authentication_8"})}}
             </div>
         </form>
